logs/pyzen.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyZen-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzen'...
Listing './lib/python3.5/site-packages/pyzen/_colorama'...
Listing './lib/python3.5/site-packages/pyzen/management'...
Listing './lib/python3.5/site-packages/pyzen/management/commands'...
Compiling './lib/python3.5/site-packages/pyzen/simple.py'...
***   File "./lib/python3.5/site-packages/pyzen/simple.py", line 31
    exec compiled in mod.__dict__
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/pyzen/ui'...
Listing './lib/python3.5/site-packages/pyzen/ui/img'...
Listing './lib/python3.5/site-packages/pyzen/ui/win32'...
Compiling './lib/python3.5/site-packages/pyzen/ui/win32/__init__.py'...
***   File "./lib/python3.5/site-packages/pyzen/ui/win32/__init__.py", line 29
    print 'Sending quit'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyzen/ui/win32/wrappers.py'...
***   File "./lib/python3.5/site-packages/pyzen/ui/win32/wrappers.py", line 70
    print 'Error processing msg(%s, %s, %s)'%(msg.message, msg.wParam, msg.lParam)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
